--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div id="game-container">
         <div id="hp-container">
             <div class="hp-wrapper">
-                <span class="hp-label">BALL 1</span>
+                <span class="hp-label">GUITAR</span>
                 <div class="hp-bar-bg">
                     <div id="hp1" class="hp-bar" style="width: 100%;"></div>
                 </div>
                 <span id="hp-val1" class="hp-value">50</span>
             </div>
             <div class="hp-wrapper">
-                <span class="hp-label">BALL 2</span>
+                <span class="hp-label">PIANO</span>
                 <div class="hp-bar-bg">
                     <div id="hp2" class="hp-bar" style="width: 100%;"></div>
                 </div>
